test/fails/bad_tags/assign5.lgl
tag a is vec2;
tag b is vec3;

vec2->b x = [[1., 1.], [1., 1.], [1., 1.]]; // Bad downcast